tests/rosetta/out/C/9-billion-names-of-god-the-integer.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:34Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:34Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static list_list_int concat_list_list_int(list_list_int a, list_list_int b) {
  list_list_int r = list_list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static int _count(list_int v) { return v.len; }
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static list_int slice_list_int(list_int v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_int r = list_int_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
static int x = 1;

list_int bigTrim(list_int a) {
  int n = a.len;
  while (n > 1 && a.data[n - 1] == 0) {
    list_int tmp1 = slice_list_int(a, 0, n - 1);
    a = tmp1;
    n = n - 1;
  }
  return a;
}

list_int bigFromInt(int x) {
  if (x == 0) {
    list_int tmp2 = list_int_create(1);
    tmp2.data[0] = 0;
    return tmp2;
  }
  list_int digits = list_int_create(0);
  int n = x;
  while (n > 0) {
    digits = 0;
    n = ((double)n) / ((double)10);
  }
  return digits;
}

list_int bigAdd(list_int a, list_int b) {
  list_int res = list_int_create(0);
  int carry = 0;
  int i = 0;
  while (i < a.len || i < b.len || carry > 0) {
    int av = 0;
    if (i < a.len) {
      av = a.data[i];
    }
    int bv = 0;
    if (i < b.len) {
      bv = b.data[i];
    }
    int s = av + bv + carry;
    res = 0;
    carry = s / 10;
    i = i + 1;
  }
  return bigTrim(res);
}

list_int bigSub(list_int a, list_int b) {
  list_int res = list_int_create(0);
  int borrow = 0;
  int i = 0;
  while (i < a.len) {
    int av = a.data[i];
    int bv = 0;
    if (i < b.len) {
      bv = b.data[i];
    }
    int diff = av - bv - borrow;
    if (diff < 0) {
      diff = diff + 10;
      borrow = 1;
    } else {
      borrow = 0;
    }
    res = 0;
    i = i + 1;
  }
  return bigTrim(res);
}

char *bigToString(list_int a) {
  char *s = "";
  int i = a.len - 1;
  while (i >= 0) {
    char *tmp3 = _str(a.data[i]);
    char *tmp4 = concat_string(s, tmp3);
    s = tmp4;
    i = i - 1;
  }
  return s;
}

int minInt(int a, int b) {
  if (a < b) {
    return a;
  } else {
    return b;
  }
}

list_list_int cumu(int n) {
  list_int cache_data[] = {bigFromInt(1)};
  list_list_int cache = {1, cache_data};
  list_int cache_data[] = {cache};
  list_list_int cache = {1, cache_data};
  int y = 1;
  while (y <= n) {
    list_int row_data[] = {bigFromInt(0)};
    list_list_int row = {1, row_data};
    int x = 1;
    while (x <= y) {
      list_int val = cache.data[y - x].data[minInt(x, y - x)];
      list_list_int tmp5 = list_list_int_create(1);
      tmp5.data[0] = bigAdd(row.data[row.len - 1], val);
      list_list_int tmp6 = concat_list_list_int(row, tmp5);
      row = tmp6;
      x = x + 1;
    }
    cache = 0;
    y = y + 1;
  }
  return cache.data[n];
}

list_string row(int n) {
  list_list_int e = cumu(n);
  list_string out = list_string_create(0);
  int i = 0;
  while (i < n) {
    list_int diff = bigSub(e.data[i + 1], e.data[i]);
    list_string tmp7 = list_string_create(1);
    tmp7.data[0] = bigToString(diff);
    list_string tmp8 = concat_list_string(out, tmp7);
    out = tmp8;
    i = i + 1;
  }
  return out;
}

int _mochi_main() {
  printf("rows:\n");
  while (x < 11) {
    list_string r = row(x);
    char *line = "";
    int i = 0;
    while (i < r.len) {
      char *tmp9 = concat_string(line, " ");
      char *tmp10 = concat_string(tmp9, r.data[i]);
      char *tmp11 = concat_string(tmp10, " ");
      line = tmp11;
      i = i + 1;
    }
    printf("%s\n", line);
    x = x + 1;
  }
  printf("\n");
  printf("sums:\n");
  list_int tmp12 = list_int_create(3);
  tmp12.data[0] = 23;
  tmp12.data[1] = 123;
  tmp12.data[2] = 1234;
  for (int tmp13 = 0; tmp13 < 3; tmp13++) {
    int num = tmp12.data[tmp13];
    int r = cumu(num);
    char *tmp14 = _str(num);
    char *tmp15 = concat_string(tmp14, " ");
    char *tmp16 = _str(num);
    char *tmp17 = concat_string(tmp16, " ");
    printf("%d\n", tmp17 + bigToString(r.data[_count(r) - 1]));
  }
  return 0;
}
int main() { return _mochi_main(); }
